Apply a class to bottomlinks for preventing wrapping in Chrome

--- a/src/css/euskalbar.css
+++ b/src/css/euskalbar.css
@@ -4,8 +4,12 @@ body
     font-family: bitstream vera sans, verdana, arial;
     font-size: 10pt;
     background-color: #FFF;
-    width: 675px;
-    max-height: 600px;
+    width: 100%;
+}
+
+.estekak 
+{
+ float: left; white-space: nowrap; 
 }
 
 .irudia
